feat: loading text added for countdown

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="content">
         <h1>Amazing Article</h1>
-        <small>Florin Pop</small>
+        <small>Maianne Thornton</small>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
           accusantium consequatur quia, inventore odio consequuntur
@@ -69,6 +69,9 @@
         <li><i class="fas fa-envelope"></i> Contact</li>
       </ul>
     </nav>
+
+    <div class="loading-text">0%</div>
+
     <script src="script.js"></script>
   </body>
 </html>
